--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="buscar-evento(vendedor).html">Buscar eventos</a></li>
-                                    <li><a href="entregar_boletos(vendedor).html">Entregar boletos</a></li>
+                                    <li><a href="@Url.Action("Entrega","Ventas")">Entregar boletos</a></li>
                                     <li><a href="@Url.Action("BuscaReserva", "CuentaUsuario")">Buscar reserva</a></li>
                                     <li><a href="devolucion_entradas.html">Devolución</a></li>
                                     <li class="divider"></li>
