--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -7,6 +7,9 @@
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
     var nombre = "";
     inf245netsoft db = new inf245netsoft();
+    
+    
+    
 }
 
 <script src="~/Scripts/jquery-2.1.4.min.js"></script>
@@ -37,8 +40,10 @@
                 <a class="btn btn-primary" onclick="redirigePromocion()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
                 <a class="btn btn-warning" onclick="redirigePostergar()">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
                 <a class="btn btn-warning" onclick="redirigeCancelar()">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
+               @if( User.IsInRole("Promotor") ){
                 <a class="btn btn-success" onclick="redirigeReservaOrganizador()">Reserva Organizador<span class="glyphicon glyphicon-flag"> </a>
                 <a class="btn btn-success" onclick="redirigeVerReservaOrganizador()"> Ver Reserva Organizador </a>
+                }
             </div>
         </div>
         <div class="col-md-2 col-sm-12" style="text-align:center">
