Se estaba usando _LayoutPersonal, pero en debe utilizarce solo _Layout, mofique eso y funcionan tood normal

--- a/WebApplication4/WebApplication4/Views/Categoria/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Categoria/Edit.cshtml
@@ -4,7 +4,7 @@
 @model CategoriaEditModel
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
     Categoria c = (Categoria)Session["categoria"];
     CategoriaEditModel cem = new CategoriaEditModel();
