--- a/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Error403";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Error 403</h2>
