--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -5,7 +5,7 @@
 
 @{
     ViewBag.Title = "Register";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new inf245netsoft();
 }
 <div class="container-fluid">
