--- a/WebApplication4/WebApplication4/Views/Home/Index2.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index2.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Index2";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     string mensaje = null;
     mensaje = (string)Session["MensajeIngresoTurno"];
     
