--- a/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     int idEvento=0;
     string nombre = null;
     if (ViewBag.idEvento != null) { 
