--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
@@ -5,7 +5,7 @@
 @{
     var db = new WebApplication4.Models.inf245netsoft();
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     PuntoVenta punto = (PuntoVenta)Session["punto"];
     PuntoVentaModel puntoM = new PuntoVentaModel();
     int idR = 0;
