--- a/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
@@ -6,7 +6,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     Regalo re = (Regalo)Session["regalo"];
     RegaloModel r1 = new RegaloModel();
     r1.nombre = re.Nombre;
