--- a/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Cierre";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
     int idPunto;
     double mS = 0, mD = 0;
