--- a/WebApplication4/WebApplication4/Views/Ventas/Entrega.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Entrega.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Entrega";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
     List<VentasXFuncion> listaEntrega = null;
     if (Session["EntregaBusca"] != null)
