--- a/WebApplication4/WebApplication4/Views/Ventas/Pago.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Pago.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Pago";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
     int idor=0;
     int idEp = 0;
