--- a/WebApplication4/WebApplication4/Views/Ventas/ReporteDia.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/ReporteDia.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ReporteDia";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container-fluid">
