--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
@@ -5,7 +5,7 @@
 
 @{
     ViewBag.Title = "ReporteCliente";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @{
