--- a/WebApplication4/WebApplication4/Views/Error/General.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/General.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "General";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>General Error</h2>
