--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -11,7 +11,7 @@
     ViewBag.MaximoPaginas = 5;
     var nombre = "";
     ViewBag.Title = "Busqueda";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     inf245netsoft db = new inf245netsoft();
 }
 
