--- a/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using Microsoft.AspNet.Identity
