--- a/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
@@ -6,7 +6,7 @@
 
     @{
         ViewBag.Title = "Index";
-        Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+        Layout = "~/Views/Shared/_Layout.cshtml";
     }
 
 <div class="container-fluid">
