--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -42,7 +42,7 @@
                     <h4>Mis reservas vigentes:</h4>
                 </div>
                 <div class="col-md-6">
-                    <a href="mi_carrito_compras.html" class="btn btn-primary pull-right">Pagar reserva <span class="glyphicon glyphicon-usd"></span></a>
+                    <a href="@Url.Action("ComprarEntrada","CuentaUsuario")" class="btn btn-primary pull-right">Pagar reserva <span class="glyphicon glyphicon-usd"></span></a>
                 </div>
 
             </div>
