Dev parcial escondido

--- a/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
@@ -143,9 +143,9 @@
                 {
                     if (funcion.estado == "POSTERGADO")
                     {
-                        <div class="col-md-11">
+                        <!--<div class="col-md-11">
                         <a class="btn btn-primary" href="" data-toggle="modal">Devolver Asiento<span class="glyphicon glyphicon-usd"></span></a>
-                        </div>
+                        </div>-->
                     }
                     <!--Devolver todo-->
                     <div class="col-md-11">
