--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -483,6 +483,100 @@
         });
 
 
+        //Validaciones para el submit
+
+        $(document).ready(function () {
+
+
+
+            if (!isNaN(@ViewBag.idCategoria)) {
+
+                $("#idCategoria > option[value='" + @ViewBag.idCategoria + "'").attr('selected', 'selected');
+
+
+                if (!isNaN(@ViewBag.idSubCat)) {
+
+
+                    $("#idSubCat > option[value='" + @ViewBag.idSubCat + "'").attr('selected', 'selected');
+
+
+
+                }
+
+
+            }
+
+            if (!isNaN(@ViewBag.idRegion)) {
+
+                $("#idRegion > option[value='" + @ViewBag.idRegion + "'").attr('selected', 'selected');
+
+
+
+                if (!isNaN(@ViewBag.idProv)) {
+
+                    $("#idProv > option[value='" + @ViewBag.idProv + "'").attr('selected', 'selected');
+
+
+
+                }
+
+            }
+
+            $("#adv-search").on('submit', function (e) {
+
+                e.preventDefault();
+
+
+                var fechI = this['fech_ini'].value;
+                var fechF = this['fech_fin'].value;
+
+                /*Regla 1 para la validadcion de al menos un campo*/
+                if (fechI == '' && fechF == '' && $("#idCategoria").val() == '' &&
+                    $("#idSubCat").val() == '' && $("#idRegion").val() == '') {
+
+                    $("#alerta").append('<strong>Ingrese al menos un campo!</strong>').show();
+                    return;
+                } else {
+
+                    var valor = $("#alerta").children('strong');
+                    if (valor.length > 0) {
+
+                        valor.remove();
+
+                    }
+
+                    $("#alerta").hide();
+
+                }
+                /*Regla 2 : Validacion para las fechas*/
+                if (fechF != '' && fechI != '') {
+
+
+                    if (new Date(fechF.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1")) < new Date(fechI.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1"))) {
+
+                        $("#alerta").append('<strong>Fecha hasta no puede ser menor que fecha desde</strong>').show();
+                        return;
+                    } else {
+                        var valor = $("#alerta").children('strong');
+                        if (valor.length > 0) {
+
+                            valor.remove();
+
+                        }
+
+                        $("#alerta").hide();
+
+                    }
+
+                }
+
+                this.submit();
+
+
+            });
+        });
+
+
 
 
         //Obtiene subcategoria
