--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-5">
             <form action="" class="form-horizontal ">
                 <ol id="pref" class="navbar " style="font-size:20px;">
                     <li><a href="@Url.Action("ModificarDatos","CuentaUsuario")">Actualizar mis datos</a>
@@ -20,6 +20,9 @@
                     <li><a href="">Ver carrito</a>
                 </ol>
             </form>
+        </div>
+        <div class="col-md-3">
+            <h3>Puntos: </h3>
         </div>
         <div class="col-md-4">
             <div class="headDestacados">
