--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -17,7 +17,7 @@
                     <li><a href="@Url.Action("ChangePassword","Manage")">Cambiar mi contraseña</a>
                     <li><a href="@Url.Action("MisReservas", "CuentaUsuario")">Ver mis reservas</a>
                     <li><a href="@Url.Action("MisCompras", "CuentaUsuario")">Ver mis Compras</a>
-                    <li><a href="">Ver carrito</a>
+                    <li><a href="@Url.Action("MiCarrito","CuentaUsuario")">Ver carrito</a>
                 </ol>
             </form>
         </div>
