--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -78,7 +78,8 @@
                             {
 
                                 var funcion = func.First();
-                                fecha = funcion.horaIni.Value.ToString("dd/MM/yyyy hh:mm tt");
+                                fecha = funcion.fecha.Value.ToString("dd/MM/yyyy");
+                                fecha = fecha + " " + funcion.horaIni.Value.ToString("hh:mm tt");
                             }
                             else
                             {
@@ -288,5 +289,20 @@
             window.open("mi_cuenta.html", "_self");
         }
     </script>
+
+    <style>
+
+         .thumbnail >  .event-img{
+
+      height:50px;
+  }
+    .bloque{
+
+        width:250px;
+        height: 150px;
+    }
+
+
+    </style>
 </body>
 </html>
