--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -60,10 +60,10 @@
 
                         @foreach (var evento in Model)
                         {
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-md-3 col-sm-6 col-xs-12 bloque-imagen">
                                 <div class="thumbnail">
                                     <a href=@Url.Action("VerEvento", "Evento", new { id = evento.codigo })>
-                                        <img class="event" src="@evento.ImagenDestacado" alt="">
+                                        <img  height="58px" class="event" src="@evento.ImagenDestacado" alt="">
                                     </a>
                                     <div class="caption" style="text-align:center">
                                         @{
@@ -292,11 +292,11 @@
 
     <style>
 
-         .thumbnail >  .event-img{
+         .thumbnail >  .event{
 
       height:50px;
   }
-    .bloque{
+    .bloque-imagen{
 
         width:250px;
         height: 150px;
